--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #000000;
+  background-color: #ffeb8f;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -20,10 +20,9 @@
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  /* Removed display: flex and place-items: center */
 }
 
 h1 {
