--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #ffeb8f;
+  background-color: #faf6f2;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
